source/ocvWrp_nativeClasses_signatures.h


int   pCvVectorvector_PointLength(vector_vector_Point* wrapper);

vector_Point*   pCvVectorvector_PointGet(vector_vector_Point* wrapper, int index);

vector_Point*   pCvVectorvector_PointSet(vector_vector_Point* wrapper, int index, vector_Point* value);

vector_vector_Point2f*   pCvVectorvector_Point2fCreate(int n);

void   pCvVectorvector_Point2fDelete(vector_vector_Point2f* wrapper);

int   pCvVectorvector_Point2fLength(vector_vector_Point2f* wrapper);

vector_Point2f*   pCvVectorvector_Point2fGet(vector_vector_Point2f* wrapper, int index);

vector_Point2f*   pCvVectorvector_Point2fSet(vector_vector_Point2f* wrapper, int index, vector_Point2f* value);

vector_vector_char*   pCvVectorvector_charCreate(int n);

void   pCvVectorvector_charDelete(vector_vector_char* wrapper);

int   pCvVectorvector_charLength(vector_vector_char* wrapper);

vector_char*   pCvVectorvector_charGet(vector_vector_char* wrapper, int index);

vector_char*   pCvVectorvector_charSet(vector_vector_char* wrapper, int index, vector_char* value);
AKAZE_t*   pCvPtr_AKAZEConvert(Ptr_AKAZE* wrapper);

Ptr_AKAZE*    pCvPtr_AKAZECreate( AKAZE_t* wrapper);

void             pCvPtr_AKAZEDelete( Ptr_AKAZE* ptr, AKAZE_t* wrapper = 0);

ml_ANN_MLP_t*   pCvPtr_ANN_MLPConvert(Ptr_ANN_MLP* wrapper);

Ptr_ANN_MLP*    pCvPtr_ANN_MLPCreate( ml_ANN_MLP_t* wrapper);

void             pCvPtr_ANN_MLPDelete( Ptr_ANN_MLP* ptr, ml_ANN_MLP_t* wrapper = 0);

AffineFeature_t*   pCvPtr_AffineFeatureConvert(Ptr_AffineFeature* wrapper);

Ptr_AffineFeature*    pCvPtr_AffineFeatureCreate( AffineFeature_t* wrapper);

void             pCvPtr_AffineFeatureDelete( Ptr_AffineFeature* ptr, AffineFeature_t* wrapper = 0);

AgastFeatureDetector_t*   pCvPtr_AgastFeatureDetectorConvert(Ptr_AgastFeatureDetector* wrapper);

Ptr_AgastFeatureDetector*    pCvPtr_AgastFeatureDetectorCreate( AgastFeatureDetector_t* wrapper);

void             pCvPtr_AgastFeatureDetectorDelete( Ptr_AgastFeatureDetector* ptr, AgastFeatureDetector_t* wrapper = 0);

AlignMTB_t*   pCvPtr_AlignMTBConvert(Ptr_AlignMTB* wrapper);

Ptr_AlignMTB*    pCvPtr_AlignMTBCreate( AlignMTB_t* wrapper);

void             pCvPtr_AlignMTBDelete( Ptr_AlignMTB* ptr, AlignMTB_t* wrapper = 0);

BRISK_t*   pCvPtr_BRISKConvert(Ptr_BRISK* wrapper);

Ptr_BRISK*    pCvPtr_BRISKCreate( BRISK_t* wrapper);

void             pCvPtr_BRISKDelete( Ptr_BRISK* ptr, BRISK_t* wrapper = 0);

BackgroundSubtractorKNN_t*   pCvPtr_BackgroundSubtractorKNNConvert(Ptr_BackgroundSubtractorKNN* wrapper);

Ptr_BackgroundSubtractorKNN*    pCvPtr_BackgroundSubtractorKNNCreate( BackgroundSubtractorKNN_t* wrapper);

void             pCvPtr_BackgroundSubtractorKNNDelete( Ptr_BackgroundSubtractorKNN* ptr, BackgroundSubtractorKNN_t* wrapper = 0);

BackgroundSubtractorMOG2_t*   pCvPtr_BackgroundSubtractorMOG2Convert(Ptr_BackgroundSubtractorMOG2* wrapper);

Ptr_BackgroundSubtractorMOG2*    pCvPtr_BackgroundSubtractorMOG2Create( BackgroundSubtractorMOG2_t* wrapper);

void             pCvPtr_BackgroundSubtractorMOG2Delete( Ptr_BackgroundSubtractorMOG2* ptr, BackgroundSubtractorMOG2_t* wrapper = 0);

detail_BestOf2NearestMatcher_t*   pCvPtr_BestOf2NearestMatcherConvert(Ptr_BestOf2NearestMatcher* wrapper);

Ptr_BestOf2NearestMatcher*    pCvPtr_BestOf2NearestMatcherCreate( detail_BestOf2NearestMatcher_t* wrapper);

void             pCvPtr_BestOf2NearestMatcherDelete( Ptr_BestOf2NearestMatcher* ptr, detail_BestOf2NearestMatcher_t* wrapper = 0);

detail_Blender_t*   pCvPtr_BlenderConvert(Ptr_Blender* wrapper);

Ptr_Blender*    pCvPtr_BlenderCreate( detail_Blender_t* wrapper);

void             pCvPtr_BlenderDelete( Ptr_Blender* ptr, detail_Blender_t* wrapper = 0);

CLAHE_t*   pCvPtr_CLAHEConvert(Ptr_CLAHE* wrapper);

Ptr_CLAHE*    pCvPtr_CLAHECreate( CLAHE_t* wrapper);

void             pCvPtr_CLAHEDelete( Ptr_CLAHE* ptr, CLAHE_t* wrapper = 0);

CalibrateDebevec_t*   pCvPtr_CalibrateDebevecConvert(Ptr_CalibrateDebevec* wrapper);

Ptr_CalibrateDebevec*    pCvPtr_CalibrateDebevecCreate( CalibrateDebevec_t* wrapper);

void             pCvPtr_CalibrateDebevecDelete( Ptr_CalibrateDebevec* ptr, CalibrateDebevec_t* wrapper = 0);

CalibrateRobertson_t*   pCvPtr_CalibrateRobertsonConvert(Ptr_CalibrateRobertson* wrapper);

Ptr_CalibrateRobertson*    pCvPtr_CalibrateRobertsonCreate( CalibrateRobertson_t* wrapper);

void             pCvPtr_CalibrateRobertsonDelete( Ptr_CalibrateRobertson* ptr, CalibrateRobertson_t* wrapper = 0);

DISOpticalFlow_t*   pCvPtr_DISOpticalFlowConvert(Ptr_DISOpticalFlow* wrapper);

Ptr_DISOpticalFlow*    pCvPtr_DISOpticalFlowCreate( DISOpticalFlow_t* wrapper);

void             pCvPtr_DISOpticalFlowDelete( Ptr_DISOpticalFlow* ptr, DISOpticalFlow_t* wrapper = 0);

ml_DTrees_t*   pCvPtr_DTreesConvert(Ptr_DTrees* wrapper);

Ptr_DTrees*    pCvPtr_DTreesCreate( ml_DTrees_t* wrapper);

void             pCvPtr_DTreesDelete( Ptr_DTrees* ptr, ml_DTrees_t* wrapper = 0);

DescriptorExtractor_t*   pCvPtr_DescriptorExtractorConvert(Ptr_DescriptorExtractor* wrapper);

Ptr_DescriptorExtractor*    pCvPtr_DescriptorExtractorCreate( DescriptorExtractor_t* wrapper);

void             pCvPtr_DescriptorExtractorDelete( Ptr_DescriptorExtractor* ptr, DescriptorExtractor_t* wrapper = 0);

BFMatcher_t*   pCvPtr_BFMatcherConvert(Ptr_BFMatcher* wrapper);

Ptr_BFMatcher*    pCvPtr_BFMatcherCreate( BFMatcher_t* wrapper);

void             pCvPtr_BFMatcherDelete( Ptr_BFMatcher* ptr, BFMatcher_t* wrapper = 0);

DescriptorMatcher_t*   pCvPtr_DescriptorMatcherConvert(Ptr_DescriptorMatcher* wrapper);

Ptr_DescriptorMatcher*    pCvPtr_DescriptorMatcherCreate( DescriptorMatcher_t* wrapper);

void             pCvPtr_DescriptorMatcherDelete( Ptr_DescriptorMatcher* ptr, DescriptorMatcher_t* wrapper = 0);

FlannBasedMatcher_t*   pCvPtr_FlannBasedMatcherConvert(Ptr_FlannBasedMatcher* wrapper);

Ptr_FlannBasedMatcher*    pCvPtr_FlannBasedMatcherCreate( FlannBasedMatcher_t* wrapper);

void             pCvPtr_FlannBasedMatcherDelete( Ptr_FlannBasedMatcher* ptr, FlannBasedMatcher_t* wrapper = 0);

ml_EM_t*   pCvPtr_EMConvert(Ptr_EM* wrapper);

Ptr_EM*    pCvPtr_EMCreate( ml_EM_t* wrapper);

void             pCvPtr_EMDelete( Ptr_EM* ptr, ml_EM_t* wrapper = 0);

detail_ExposureCompensator_t*   pCvPtr_ExposureCompensatorConvert(Ptr_ExposureCompensator* wrapper);

Ptr_ExposureCompensator*    pCvPtr_ExposureCompensatorCreate( detail_ExposureCompensator_t* wrapper);

void             pCvPtr_ExposureCompensatorDelete( Ptr_ExposureCompensator* ptr, detail_ExposureCompensator_t* wrapper = 0);

FaceDetectorYN_t*   pCvPtr_FaceDetectorYNConvert(Ptr_FaceDetectorYN* wrapper);

Ptr_FaceDetectorYN*    pCvPtr_FaceDetectorYNCreate( FaceDetectorYN_t* wrapper);

void             pCvPtr_FaceDetectorYNDelete( Ptr_FaceDetectorYN* ptr, FaceDetectorYN_t* wrapper = 0);

ml_RTrees_t*   pCvPtr_RTreesConvert(Ptr_RTrees* wrapper);

Ptr_RTrees*    pCvPtr_RTreesCreate( ml_RTrees_t* wrapper);

void             pCvPtr_RTreesDelete( Ptr_RTrees* ptr, ml_RTrees_t* wrapper = 0);

ml_Boost_t*   pCvPtr_BoostConvert(Ptr_Boost* wrapper);

Ptr_Boost*    pCvPtr_BoostCreate( ml_Boost_t* wrapper);

void             pCvPtr_BoostDelete( Ptr_Boost* ptr, ml_Boost_t* wrapper = 0);

FaceRecognizerSF_t*   pCvPtr_FaceRecognizerSFConvert(Ptr_FaceRecognizerSF* wrapper);

Ptr_FaceRecognizerSF*    pCvPtr_FaceRecognizerSFCreate( FaceRecognizerSF_t* wrapper);

void             pCvPtr_FaceRecognizerSFDelete( Ptr_FaceRecognizerSF* ptr, FaceRecognizerSF_t* wrapper = 0);

FarnebackOpticalFlow_t*   pCvPtr_FarnebackOpticalFlowConvert(Ptr_FarnebackOpticalFlow* wrapper);

Ptr_FarnebackOpticalFlow*    pCvPtr_FarnebackOpticalFlowCreate( FarnebackOpticalFlow_t* wrapper);

void             pCvPtr_FarnebackOpticalFlowDelete( Ptr_FarnebackOpticalFlow* ptr, FarnebackOpticalFlow_t* wrapper = 0);

FastFeatureDetector_t*   pCvPtr_FastFeatureDetectorConvert(Ptr_FastFeatureDetector* wrapper);

Ptr_FastFeatureDetector*    pCvPtr_FastFeatureDetectorCreate( FastFeatureDetector_t* wrapper);

void             pCvPtr_FastFeatureDetectorDelete( Ptr_FastFeatureDetector* ptr, FastFeatureDetector_t* wrapper = 0);

Feature2D_t*   pCvPtr_Feature2DConvert(Ptr_Feature2D* wrapper);

Ptr_Feature2D*    pCvPtr_Feature2DCreate( Feature2D_t* wrapper);

void             pCvPtr_Feature2DDelete( Ptr_Feature2D* ptr, Feature2D_t* wrapper = 0);

FeatureDetector_t*   pCvPtr_FeatureDetectorConvert(Ptr_FeatureDetector* wrapper);

Ptr_FeatureDetector*    pCvPtr_FeatureDetectorCreate( FeatureDetector_t* wrapper);

void             pCvPtr_FeatureDetectorDelete( Ptr_FeatureDetector* ptr, FeatureDetector_t* wrapper = 0);

FileStorage_t*   pCvPtr_FileStorageConvert(Ptr_FileStorage* wrapper);

Ptr_FileStorage*    pCvPtr_FileStorageCreate( FileStorage_t* wrapper);

void             pCvPtr_FileStorageDelete( Ptr_FileStorage* ptr, FileStorage_t* wrapper = 0);

GFTTDetector_t*   pCvPtr_GFTTDetectorConvert(Ptr_GFTTDetector* wrapper);

Ptr_GFTTDetector*    pCvPtr_GFTTDetectorCreate( GFTTDetector_t* wrapper);

void             pCvPtr_GFTTDetectorDelete( Ptr_GFTTDetector* ptr, GFTTDetector_t* wrapper = 0);

GeneralizedHoughBallard_t*   pCvPtr_GeneralizedHoughBallardConvert(Ptr_GeneralizedHoughBallard* wrapper);