Delphi/unOcvWrapper_nativeClasses.pas

Function    pCvVectorvector_PointLength(const wrapper: PCvvector_vector_Point): Integer; cdecl;
Function    pCvVectorvector_PointGet(const wrapper: PCvvector_vector_Point; const index: Integer): PCvvector_vector_Point; cdecl;
Function    pCvVectorvector_PointSet(const wrapper: PCvvector_vector_Point; const index: Integer; const val: PCvvector_vector_Point): PCvvector_vector_Point; cdecl;
Function    pCvVectorvector_Point2fCreate(const n: Integer): PCvvector_vector_Point2f; cdecl;
Procedure   pCvVectorvector_Point2fDelete(const wrapper: PCvvector_vector_Point2f); cdecl;
Function    pCvVectorvector_Point2fLength(const wrapper: PCvvector_vector_Point2f): Integer; cdecl;
Function    pCvVectorvector_Point2fGet(const wrapper: PCvvector_vector_Point2f; const index: Integer): PCvvector_vector_Point2f; cdecl;
Function    pCvVectorvector_Point2fSet(const wrapper: PCvvector_vector_Point2f; const index: Integer; const val: PCvvector_vector_Point2f): PCvvector_vector_Point2f; cdecl;
Function    pCvVectorvector_charCreate(const n: Integer): PCvvector_vector_char; cdecl;
Procedure   pCvVectorvector_charDelete(const wrapper: PCvvector_vector_char); cdecl;
Function    pCvVectorvector_charLength(const wrapper: PCvvector_vector_char): Integer; cdecl;
Function    pCvVectorvector_charGet(const wrapper: PCvvector_vector_char; const index: Integer): PCvvector_vector_char; cdecl;
Function    pCvVectorvector_charSet(const wrapper: PCvvector_vector_char; const index: Integer; const val: PCvvector_vector_char): PCvvector_vector_char; cdecl;
Function    pCvPtr_AKAZEConvert(const wrapper: PCvPtr_AKAZE): PCvAKAZE_t; cdecl;
Function    pCvPtr_AKAZECreate(const wrapper: PCvAKAZE_t): PCvPtr_AKAZE; cdecl;
Procedure   pCvPtr_AKAZEDelete(const cptr: PCvPtr_AKAZE;  const wrapper: PCvAKAZE_t); cdecl;
Function    pCvPtr_ANN_MLPConvert(const wrapper: PCvPtr_ANN_MLP): PCvml_ANN_MLP_t; cdecl;
Function    pCvPtr_ANN_MLPCreate(const wrapper: PCvml_ANN_MLP_t): PCvPtr_ANN_MLP; cdecl;
Procedure   pCvPtr_ANN_MLPDelete(const cptr: PCvPtr_ANN_MLP;  const wrapper: PCvml_ANN_MLP_t); cdecl;
Function    pCvPtr_AffineFeatureConvert(const wrapper: PCvPtr_AffineFeature): PCvAffineFeature_t; cdecl;
Function    pCvPtr_AffineFeatureCreate(const wrapper: PCvAffineFeature_t): PCvPtr_AffineFeature; cdecl;
Procedure   pCvPtr_AffineFeatureDelete(const cptr: PCvPtr_AffineFeature;  const wrapper: PCvAffineFeature_t); cdecl;
Function    pCvPtr_AgastFeatureDetectorConvert(const wrapper: PCvPtr_AgastFeatureDetector): PCvAgastFeatureDetector_t; cdecl;
Function    pCvPtr_AgastFeatureDetectorCreate(const wrapper: PCvAgastFeatureDetector_t): PCvPtr_AgastFeatureDetector; cdecl;
Procedure   pCvPtr_AgastFeatureDetectorDelete(const cptr: PCvPtr_AgastFeatureDetector;  const wrapper: PCvAgastFeatureDetector_t); cdecl;
Function    pCvPtr_AlignMTBConvert(const wrapper: PCvPtr_AlignMTB): PCvAlignMTB_t; cdecl;
Function    pCvPtr_AlignMTBCreate(const wrapper: PCvAlignMTB_t): PCvPtr_AlignMTB; cdecl;
Procedure   pCvPtr_AlignMTBDelete(const cptr: PCvPtr_AlignMTB;  const wrapper: PCvAlignMTB_t); cdecl;
Function    pCvPtr_BRISKConvert(const wrapper: PCvPtr_BRISK): PCvBRISK_t; cdecl;
Function    pCvPtr_BRISKCreate(const wrapper: PCvBRISK_t): PCvPtr_BRISK; cdecl;
Procedure   pCvPtr_BRISKDelete(const cptr: PCvPtr_BRISK;  const wrapper: PCvBRISK_t); cdecl;
Function    pCvPtr_BackgroundSubtractorKNNConvert(const wrapper: PCvPtr_BackgroundSubtractorKNN): PCvBackgroundSubtractorKNN_t; cdecl;
Function    pCvPtr_BackgroundSubtractorKNNCreate(const wrapper: PCvBackgroundSubtractorKNN_t): PCvPtr_BackgroundSubtractorKNN; cdecl;
Procedure   pCvPtr_BackgroundSubtractorKNNDelete(const cptr: PCvPtr_BackgroundSubtractorKNN;  const wrapper: PCvBackgroundSubtractorKNN_t); cdecl;
Function    pCvPtr_BackgroundSubtractorMOG2Convert(const wrapper: PCvPtr_BackgroundSubtractorMOG2): PCvBackgroundSubtractorMOG2_t; cdecl;
Function    pCvPtr_BackgroundSubtractorMOG2Create(const wrapper: PCvBackgroundSubtractorMOG2_t): PCvPtr_BackgroundSubtractorMOG2; cdecl;
Procedure   pCvPtr_BackgroundSubtractorMOG2Delete(const cptr: PCvPtr_BackgroundSubtractorMOG2;  const wrapper: PCvBackgroundSubtractorMOG2_t); cdecl;
Function    pCvPtr_BestOf2NearestMatcherConvert(const wrapper: PCvPtr_BestOf2NearestMatcher): PCvdetail_BestOf2NearestMatcher_t; cdecl;
Function    pCvPtr_BestOf2NearestMatcherCreate(const wrapper: PCvdetail_BestOf2NearestMatcher_t): PCvPtr_BestOf2NearestMatcher; cdecl;
Procedure   pCvPtr_BestOf2NearestMatcherDelete(const cptr: PCvPtr_BestOf2NearestMatcher;  const wrapper: PCvdetail_BestOf2NearestMatcher_t); cdecl;
Function    pCvPtr_BlenderConvert(const wrapper: PCvPtr_Blender): PCvdetail_Blender_t; cdecl;
Function    pCvPtr_BlenderCreate(const wrapper: PCvdetail_Blender_t): PCvPtr_Blender; cdecl;
Procedure   pCvPtr_BlenderDelete(const cptr: PCvPtr_Blender;  const wrapper: PCvdetail_Blender_t); cdecl;
Function    pCvPtr_CLAHEConvert(const wrapper: PCvPtr_CLAHE): PCvCLAHE_t; cdecl;
Function    pCvPtr_CLAHECreate(const wrapper: PCvCLAHE_t): PCvPtr_CLAHE; cdecl;
Procedure   pCvPtr_CLAHEDelete(const cptr: PCvPtr_CLAHE;  const wrapper: PCvCLAHE_t); cdecl;
Function    pCvPtr_CalibrateDebevecConvert(const wrapper: PCvPtr_CalibrateDebevec): PCvCalibrateDebevec_t; cdecl;
Function    pCvPtr_CalibrateDebevecCreate(const wrapper: PCvCalibrateDebevec_t): PCvPtr_CalibrateDebevec; cdecl;
Procedure   pCvPtr_CalibrateDebevecDelete(const cptr: PCvPtr_CalibrateDebevec;  const wrapper: PCvCalibrateDebevec_t); cdecl;
Function    pCvPtr_CalibrateRobertsonConvert(const wrapper: PCvPtr_CalibrateRobertson): PCvCalibrateRobertson_t; cdecl;
Function    pCvPtr_CalibrateRobertsonCreate(const wrapper: PCvCalibrateRobertson_t): PCvPtr_CalibrateRobertson; cdecl;
Procedure   pCvPtr_CalibrateRobertsonDelete(const cptr: PCvPtr_CalibrateRobertson;  const wrapper: PCvCalibrateRobertson_t); cdecl;
Function    pCvPtr_DISOpticalFlowConvert(const wrapper: PCvPtr_DISOpticalFlow): PCvDISOpticalFlow_t; cdecl;
Function    pCvPtr_DISOpticalFlowCreate(const wrapper: PCvDISOpticalFlow_t): PCvPtr_DISOpticalFlow; cdecl;
Procedure   pCvPtr_DISOpticalFlowDelete(const cptr: PCvPtr_DISOpticalFlow;  const wrapper: PCvDISOpticalFlow_t); cdecl;
Function    pCvPtr_DTreesConvert(const wrapper: PCvPtr_DTrees): PCvml_DTrees_t; cdecl;
Function    pCvPtr_DTreesCreate(const wrapper: PCvml_DTrees_t): PCvPtr_DTrees; cdecl;
Procedure   pCvPtr_DTreesDelete(const cptr: PCvPtr_DTrees;  const wrapper: PCvml_DTrees_t); cdecl;
Function    pCvPtr_DescriptorExtractorConvert(const wrapper: PCvPtr_DescriptorExtractor): PCvDescriptorExtractor_t; cdecl;
Function    pCvPtr_DescriptorExtractorCreate(const wrapper: PCvDescriptorExtractor_t): PCvPtr_DescriptorExtractor; cdecl;
Procedure   pCvPtr_DescriptorExtractorDelete(const cptr: PCvPtr_DescriptorExtractor;  const wrapper: PCvDescriptorExtractor_t); cdecl;
Function    pCvPtr_BFMatcherConvert(const wrapper: PCvPtr_BFMatcher): PCvBFMatcher_t; cdecl;
Function    pCvPtr_BFMatcherCreate(const wrapper: PCvBFMatcher_t): PCvPtr_BFMatcher; cdecl;
Procedure   pCvPtr_BFMatcherDelete(const cptr: PCvPtr_BFMatcher;  const wrapper: PCvBFMatcher_t); cdecl;
Function    pCvPtr_DescriptorMatcherConvert(const wrapper: PCvPtr_DescriptorMatcher): PCvDescriptorMatcher_t; cdecl;
Function    pCvPtr_DescriptorMatcherCreate(const wrapper: PCvDescriptorMatcher_t): PCvPtr_DescriptorMatcher; cdecl;
Procedure   pCvPtr_DescriptorMatcherDelete(const cptr: PCvPtr_DescriptorMatcher;  const wrapper: PCvDescriptorMatcher_t); cdecl;
Function    pCvPtr_FlannBasedMatcherConvert(const wrapper: PCvPtr_FlannBasedMatcher): PCvFlannBasedMatcher_t; cdecl;
Function    pCvPtr_FlannBasedMatcherCreate(const wrapper: PCvFlannBasedMatcher_t): PCvPtr_FlannBasedMatcher; cdecl;
Procedure   pCvPtr_FlannBasedMatcherDelete(const cptr: PCvPtr_FlannBasedMatcher;  const wrapper: PCvFlannBasedMatcher_t); cdecl;
Function    pCvPtr_EMConvert(const wrapper: PCvPtr_EM): PCvml_EM_t; cdecl;
Function    pCvPtr_EMCreate(const wrapper: PCvml_EM_t): PCvPtr_EM; cdecl;
Procedure   pCvPtr_EMDelete(const cptr: PCvPtr_EM;  const wrapper: PCvml_EM_t); cdecl;
Function    pCvPtr_ExposureCompensatorConvert(const wrapper: PCvPtr_ExposureCompensator): PCvdetail_ExposureCompensator_t; cdecl;
Function    pCvPtr_ExposureCompensatorCreate(const wrapper: PCvdetail_ExposureCompensator_t): PCvPtr_ExposureCompensator; cdecl;
Procedure   pCvPtr_ExposureCompensatorDelete(const cptr: PCvPtr_ExposureCompensator;  const wrapper: PCvdetail_ExposureCompensator_t); cdecl;
Function    pCvPtr_FaceDetectorYNConvert(const wrapper: PCvPtr_FaceDetectorYN): PCvFaceDetectorYN_t; cdecl;
Function    pCvPtr_FaceDetectorYNCreate(const wrapper: PCvFaceDetectorYN_t): PCvPtr_FaceDetectorYN; cdecl;
Procedure   pCvPtr_FaceDetectorYNDelete(const cptr: PCvPtr_FaceDetectorYN;  const wrapper: PCvFaceDetectorYN_t); cdecl;
Function    pCvPtr_RTreesConvert(const wrapper: PCvPtr_RTrees): PCvml_RTrees_t; cdecl;
Function    pCvPtr_RTreesCreate(const wrapper: PCvml_RTrees_t): PCvPtr_RTrees; cdecl;
Procedure   pCvPtr_RTreesDelete(const cptr: PCvPtr_RTrees;  const wrapper: PCvml_RTrees_t); cdecl;
Function    pCvPtr_BoostConvert(const wrapper: PCvPtr_Boost): PCvml_Boost_t; cdecl;
Function    pCvPtr_BoostCreate(const wrapper: PCvml_Boost_t): PCvPtr_Boost; cdecl;
Procedure   pCvPtr_BoostDelete(const cptr: PCvPtr_Boost;  const wrapper: PCvml_Boost_t); cdecl;
Function    pCvPtr_FaceRecognizerSFConvert(const wrapper: PCvPtr_FaceRecognizerSF): PCvFaceRecognizerSF_t; cdecl;
Function    pCvPtr_FaceRecognizerSFCreate(const wrapper: PCvFaceRecognizerSF_t): PCvPtr_FaceRecognizerSF; cdecl;
Procedure   pCvPtr_FaceRecognizerSFDelete(const cptr: PCvPtr_FaceRecognizerSF;  const wrapper: PCvFaceRecognizerSF_t); cdecl;
Function    pCvPtr_FarnebackOpticalFlowConvert(const wrapper: PCvPtr_FarnebackOpticalFlow): PCvFarnebackOpticalFlow_t; cdecl;
Function    pCvPtr_FarnebackOpticalFlowCreate(const wrapper: PCvFarnebackOpticalFlow_t): PCvPtr_FarnebackOpticalFlow; cdecl;
Procedure   pCvPtr_FarnebackOpticalFlowDelete(const cptr: PCvPtr_FarnebackOpticalFlow;  const wrapper: PCvFarnebackOpticalFlow_t); cdecl;
Function    pCvPtr_FastFeatureDetectorConvert(const wrapper: PCvPtr_FastFeatureDetector): PCvFastFeatureDetector_t; cdecl;
Function    pCvPtr_FastFeatureDetectorCreate(const wrapper: PCvFastFeatureDetector_t): PCvPtr_FastFeatureDetector; cdecl;
Procedure   pCvPtr_FastFeatureDetectorDelete(const cptr: PCvPtr_FastFeatureDetector;  const wrapper: PCvFastFeatureDetector_t); cdecl;
Function    pCvPtr_Feature2DConvert(const wrapper: PCvPtr_Feature2D): PCvFeature2D_t; cdecl;
Function    pCvPtr_Feature2DCreate(const wrapper: PCvFeature2D_t): PCvPtr_Feature2D; cdecl;
Procedure   pCvPtr_Feature2DDelete(const cptr: PCvPtr_Feature2D;  const wrapper: PCvFeature2D_t); cdecl;
Function    pCvPtr_FeatureDetectorConvert(const wrapper: PCvPtr_FeatureDetector): PCvFeatureDetector_t; cdecl;
Function    pCvPtr_FeatureDetectorCreate(const wrapper: PCvFeatureDetector_t): PCvPtr_FeatureDetector; cdecl;
Procedure   pCvPtr_FeatureDetectorDelete(const cptr: PCvPtr_FeatureDetector;  const wrapper: PCvFeatureDetector_t); cdecl;
Function    pCvPtr_FileStorageConvert(const wrapper: PCvPtr_FileStorage): PCvFileStorage_t; cdecl;
Function    pCvPtr_FileStorageCreate(const wrapper: PCvFileStorage_t): PCvPtr_FileStorage; cdecl;
Procedure   pCvPtr_FileStorageDelete(const cptr: PCvPtr_FileStorage;  const wrapper: PCvFileStorage_t); cdecl;
Function    pCvPtr_GFTTDetectorConvert(const wrapper: PCvPtr_GFTTDetector): PCvGFTTDetector_t; cdecl;
Function    pCvPtr_GFTTDetectorCreate(const wrapper: PCvGFTTDetector_t): PCvPtr_GFTTDetector; cdecl;
Procedure   pCvPtr_GFTTDetectorDelete(const cptr: PCvPtr_GFTTDetector;  const wrapper: PCvGFTTDetector_t); cdecl;
Function    pCvPtr_GeneralizedHoughBallardConvert(const wrapper: PCvPtr_GeneralizedHoughBallard): PCvGeneralizedHoughBallard_t; cdecl;
